changing top half of webpage still need four more pictures

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Declan Meehan | Full Stack Developer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,13 +25,12 @@
     <link href="css/creative.min.css" rel="stylesheet">
 
   </head>
-
   <body id="page-top">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Top</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,12 +58,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Declan Meehan's Portfolio Site</strong>
+              <strong>Hi, I'm Declan Meehan</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Web developer in Chicago</p>
+            <p class="text-faded mb-5">I am a full stack Web developer in Chicago</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
           </div>
         </div>
@@ -99,28 +98,28 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Languages</h3>
-              <p class="text-muted mb-0">Can work in many different programming languages.</p>
+              <p class="text-muted mb-0">I have experience in many different programming languages. My current favorites are Ruby, Python, and Javascript. </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">API's</h3>
-              <p class="text-muted mb-0">Able to create and maintian API's.</p>
+              <p class="text-muted mb-0">I also make fully customizable versioned RESTful API's backend and frontend. </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Mobile Development</h3>
-              <p class="text-muted mb-0">I make sites that work on your phone just as well as your computer.</p>
+              <h3 class="mb-3">Flexibility</h3>
+              <p class="text-muted mb-0">I make sites that work on your phone or tablet just as well as your computer. I'm always learning something new because with programming there's no 'right' way to do something, just better ways. I treat it as an art.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Frameworks</h3>
-              <p class="text-muted mb-0">Knowledge of many languages frameworks.</p>
+              <h3 class="mb-3">In depth knowledge</h3>
+              <p class="text-muted mb-0">I take the approach of learning how to code the hard way first so that by the time I implement frameworks into my apps any scripts I write I could just as easily write out manually as well.</p>
             </div>
           </div>
         </div>
@@ -136,7 +135,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Build To Learn Splash Page
                   </div>
                   <div class="project-name">
                     Owl Bot
@@ -151,10 +150,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Chrome Extension
                   </div>
                   <div class="project-name">
-                    Chrome Extension
+                    Includes a customizable calendar with geolocation weather and quotes of the day (in progress).
                   </div>
                 </div>
               </div>
