almost done finsihed bottom just nedds a coupla more pictures hopefully also added dfa icons if this breaks you know why bud

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h1 class="text-uppercase">
+            <h1>
               <strong>Hi, I'm Declan Meehan</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">I am a full stack Web developer in Chicago</p>
+            <p class="text-faded mb-5">I am a full stack Web developer in Chicago looking for experience and somewhere to show off my current skill set.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
           </div>
         </div>
@@ -105,7 +105,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">API's</h3>
-              <p class="text-muted mb-0">I also make fully customizable versioned RESTful API's backend and frontend. </p>
+              <p class="text-muted mb-0">I also make fully customizable versioned RESTful API's backend and frontend. With frameworks like flask, react or ruby on rails. </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -118,7 +118,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">In depth knowledge</h3>
+              <h3 class="mb-3">In depth</h3>
               <p class="text-muted mb-0">I take the approach of learning how to code the hard way first so that by the time I implement frameworks into my apps any scripts I write I could just as easily write out manually as well.</p>
             </div>
           </div>
@@ -225,8 +225,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">Currently studying at Actualize</h2>
+        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Check it out!</a>
       </div>
     </section>
 
@@ -236,18 +236,18 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Want to get in touch? send me a message on my linkedin and i will get back to you as soon as possible.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
+            <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
+            <p>https://github.com/declanmeehan</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+            <i class="fa fa-linkedin fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              <a href="https://www.linkedin.com/in/declanmeehan8">linkedin</a>
             </p>
           </div>
         </div>
