fixed thumb pictures

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+        <div class="row no-gutters">
+          <div class="col-lg-6 col-sm-6">
+            <a class="portfolio-box" href="https://quiet-depths-19003.herokuapp.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -144,8 +144,8 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+          <div class="col-lg-6 col-sm-6">
+            <a class="portfolio-box" href="https://github.com/declanmeehan/chinguVoy2">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -159,61 +159,31 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+          <div class="col-lg-6 col-sm-6">
+            <a class="portfolio-box" href="https://github.com/declanmeehan/quoteGenerator">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Random Quote Generator
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Pulls data from an API to give you the quote of the day, also uses jquery and materialize
                   </div>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+          <div class="col-lg-6 col-sm-6">
+            <a class="portfolio-box" href="https://github.com/declanmeehan/capstone">
               <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Sample Spotter
                   </div>
                   <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
+                    A new way to find samples, features an online DAW to manipulate audio files and create your own instrument
                   </div>
                 </div>
               </div>
@@ -225,8 +195,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Currently studying at Actualize</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Check it out!</a>
+        <h2 class="mb-4">Currently working in an apprenticeship at Actualize</h2>
+        <a class="btn btn-light btn-xl sr-button" href="http://www.anyonecanlearntocode.com/">Check it out!</a>
       </div>
     </section>
 
@@ -241,14 +211,10 @@
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
-            <p>https://github.com/declanmeehan</p>
+           <a href="https://github.com/declanmeehan" <i class="fa fa-github fa-3x mb-3 sr-contact"></i> </a>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-linkedin fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="https://www.linkedin.com/in/declanmeehan8">linkedin</a>
-            </p>
+          <a href="https://www.linkedin.com/in/declanmeehan8">  <i class="fa fa-linkedin fa-3x mb-3 sr-contact"></i></a>
           </div>
         </div>
       </div>
