--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </a>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <a class="portfolio-box" href="https://github.com/declanmeehan/quoteGenerator">
+            <a class="portfolio-box" href="https://quotegenerator2018.herokuapp.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
