minor changes to wording

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     Random Quote Generator
                   </div>
                   <div class="project-name">
-                    Pulls data from an API to give you the quote of the day, also uses jquery and materialize
+                    shows you a quote for the day, you can also use twitter through the site to tweet out the quote.
                   </div>
                 </div>
               </div>
@@ -195,8 +195,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Currently working in an apprenticeship at Actualize</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://www.anyonecanlearntocode.com/">Check it out!</a>
+        <h2 class="mb-4">Currently working as a software tester at Opternative</h2>
+        <a class="btn btn-light btn-xl sr-button" href="http://www.opternative.com/">Check it out!</a>
       </div>
     </section>
 
@@ -206,7 +206,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Want to get in touch? send me a message on my linkedin and i will get back to you as soon as possible.</p>
+            <p class="mb-5">Want to get in touch? send me a message on my linkedin and i will get back to you as soon as possible, or view any of my open source projects on Github.</p>
           </div>
         </div>
         <div class="row">
