changed current working status

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Currently working as a software tester at Opternative</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://www.opternative.com/">Check it out!</a>
+        <h2 class="mb-4">Currently working as a web developer for Gallery Furniture</h2>
+        <a class="btn btn-light btn-xl sr-button" href="https://www.galleryfurniture.com/">Check it out!</a>
       </div>
     </section>
 
