changed background and wording for St. louis

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">I am a full stack Web developer in Chicago looking for experience and somewhere to show off my current skill set.</p>
+            <p class="text-faded mb-5">I am a full stack Web developer in St. Louis looking for somewhere to show off my current skill set.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Summary</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Seeking junior developer position in web development where I can continue to expand skills learned in the Actualize development bootcamp. Hard worker with experience and a  strong aptitude in web development and software engineering. Able to build complex web frameworks with an aptitude for algebra and logic based problem solving.</p>
+            <p class="text-faded mb-4">I am currently available for a web development position in St. Louis. I have two years of proffesional experience and a strong aptitude in web development and software engineering. I do full stack web development with an emphasis on UI/UX, mainly working with javascript, ruby on rails, and react.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Overview</a>
           </div>
         </div>
